[gd_scene load_steps=7 format=3 uid="uid://be74smfh0hkry"]

[ext_resource type="Script" path="res://Scripts/crumbling_platform.gd" id="1_b6mdo"]
[ext_resource type="Shader" uid="uid://dqcbpkck1cny8" path="res://Assets/Shaders/crumbling_platform.tres" id="2_cgxvl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_44vn3"]
size = Vector3(3, 1.5, 3)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tehkk"]
render_priority = 0
shader = ExtResource("2_cgxvl")
shader_parameter/FloatParameter = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_4dtk8"]
material = SubResource("ShaderMaterial_tehkk")
size = Vector3(3, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_33ip2"]
size = Vector3(3, 1, 3)

[node name="Crumbling Platform" type="AnimatableBody3D"]
script = ExtResource("1_b6mdo")

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_44vn3")

[node name="Timer" type="Timer" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_4dtk8")
skeleton = NodePath("../CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_33ip2")

[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
